<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/tv_date_of_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:text="@string/date_of_month"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_short_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_month"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"/>

            <TextView
                android:id="@+id/tv_day_of_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|bottom"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:text="@string/day_of_week"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorSecondaryText"
                android:textSize="12sp"
                android:paddingTop="5dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/year"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorSecondaryText"
            android:gravity="center_vertical"
            android:paddingTop="6dp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/entry_detail"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:textAlignment="textStart"
        android:layout_gravity="start"
        android:id="@+id/tv_entry_detail" />

</LinearLayout>