<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:scrollbars="none">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:id="@+id/scroll_view">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/entry_detail"
            android:id="@+id/tv_entry_detail"
            android:textColor="@color/colorPrimaryText" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_entry_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:inputType="textCapSentences|textMultiLine"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:hint="@string/entry_hint"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            android:textColorHighlight="@color/colorPrimaryLight" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:layout_height="wrap_content"
                android:text="@string/save_btn_draft"
                android:background="@drawable/button_background"
                android:textColor="@color/colorTextIcons"
                android:id="@+id/btn_draft"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_height="wrap_content"
                android:text="@string/save_btn_txt"
                android:background="@drawable/button_background"
                android:textColor="@color/colorTextIcons"
                android:id="@+id/btn_save"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>